--- a/Resources/administration/src/module/sw-manufacturer/page/sw-manufacturer-list/sw-manufacturer-list.html.twig
+++ b/Resources/administration/src/module/sw-manufacturer/page/sw-manufacturer-list/sw-manufacturer-list.html.twig
@@ -67,7 +67,7 @@
                                                             truncate
                                                             editable>
                                                 <router-link class="sw-manufacturer-list_column-manufacturer-name" :to="{ name: 'sw.manufacturer.detail', params: { id: item.id } }">
-                                                    {{ item.meta.viewData.name }}
+                                                    {{ item.translated.name }}
                                                 </router-link>
 
                                                 {% block sw_manufacturer_list_grid_columns_name_editor %}
@@ -98,7 +98,7 @@
                                                             dataIndex="description"
                                                             truncate
                                                             sortable>
-                                                {{ item.meta.viewData.description | striphtml | truncate }}
+                                                {{ item.translated.description | striphtml | truncate }}
                                             </sw-grid-column>
                                         {% endblock %}
 
@@ -137,7 +137,7 @@
                                                   variant="small">
                                             {% block sw_manufacturer_list_delete_modal_confirm_delete_text %}
                                                 <p class="sw-customer-detail-addresses__confirm-delete-text">
-                                                    {{ $tc('sw-manufacturer.list.textDeleteConfirm', 0, { name: item.meta.viewData.name }) }}
+                                                    {{ $tc('sw-manufacturer.list.textDeleteConfirm', 0, { name: item.translated.name }) }}
                                                 </p>
                                             {% endblock %}
 
