--- a/Resources/administration/src/module/sw-product/component/sw-product-price-form/sw-product-price-form.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-price-form/sw-product-price-form.html.twig
@@ -8,7 +8,7 @@
                           :placeholder="$tc('sw-product.priceForm.placeholderTaxRate')"
                           validation="required"
                           v-model="product.taxId">
-                        <option v-for="tax in taxRates" :value="tax.id">{{ tax.meta.viewData.name }}</option>
+                        <option v-for="tax in taxRates" :value="tax.id">{{ tax.name }}</option>
                 </sw-field>
             {% endblock %}
 
