--- a/Resources/administration/src/module/sw-product/component/sw-product-visibility-detail/sw-product-visibility-detail.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-visibility-detail/sw-product-visibility-detail.html.twig
@@ -6,7 +6,7 @@
                     <sw-grid-column flex="minmax(100px, 2fr)">
                         {% block sw_product_visibility_detail_columns_sales_channel_label %}
                             <span v-if="item.salesChannelInternal" class="sw-select__selection-item">
-                                {{ item.salesChannelInternal.meta.viewData.name }}
+                                {{ item.salesChannelInternal.translated.name }}
                             </span>
                             <span v-else>
                                 {{ item.salesChannel.name }}
