--- a/Resources/administration/src/module/sw-product/page/sw-product-list/sw-product-list.twig
+++ b/Resources/administration/src/module/sw-product/page/sw-product-list/sw-product-list.twig
@@ -136,7 +136,7 @@
                                                   variant="small">
                                             {% block sw_product_list_delete_modal_confirm_delete_text %}
                                                 <p class="sw-product-list__confirm-delete-text">
-                                                    {{ $tc('sw-product.list.textDeleteConfirm', 0, { name: item.meta.viewData.name }) }}
+                                                    {{ $tc('sw-product.list.textDeleteConfirm', 0, { name: item.translated.name }) }}
                                                 </p>
                                             {% endblock %}
 
