--- a/Resources/administration/src/app/component/base/sw-property-search/sw-property-search.html.twig
+++ b/Resources/administration/src/app/component/base/sw-property-search/sw-property-search.html.twig
@@ -41,7 +41,7 @@
                                         {% block sw_property_search_tree_group_grid_columns_name %}
                                             <sw-grid-column truncate class="group_grid__column-name" flex="minmax(200px, 1fr)" dataIndex="name" @click="selectGroup(item)">
                                                 <sw-icon name="multicolor-folder-breadcrumbs" size="16px" multicolor></sw-icon>
-                                                {{ item.name }}
+                                                {{ item.translated.name }}
                                             </sw-grid-column>
                                         {% endblock %}
 
@@ -75,7 +75,7 @@
                                     <template slot="columns" slot-scope="{ item }">
                                         {% block sw_property_search_tree_option_grid_columns_name %}
                                             <sw-grid-column flex="200px" dataIndex="name">
-                                                {{ item.name }}
+                                                {{ item.translated.name }}
                                             </sw-grid-column>
                                         {% endblock %}
                                     </template>
@@ -111,7 +111,7 @@
                             <template slot="columns" slot-scope="{ item }">
                                 {% block sw_property_search_option_search_grid_columns_name %}
                                     <sw-grid-column flex="200px" dataIndex="name">
-                                        {{ item.group.name }} / {{ item.name }}
+                                        {{ item.group.translated.name }} / {{ item.translated.name }}
                                     </sw-grid-column>
                                 {% endblock %}
                             </template>
