--- a/Resources/administration/src/module/sw-order/component/sw-order-state-history-card-entry/sw-order-state-history-card-entry.html.twig
+++ b/Resources/administration/src/module/sw-order/component/sw-order-state-history-card-entry/sw-order-state-history-card-entry.html.twig
@@ -19,7 +19,7 @@
                 {% endblock%}
 
                 {% block sw_order_state_card_entry_description %}
-                    <span class='sw-order-state-card__text'>{{ entry.state.meta.viewData.name}}</span>
+                    <span class='sw-order-state-card__text'>{{ entry.state.translated.name}}</span>
                 {% endblock %}
 
                 {% block sw_order_state_card_entry_date %}
