--- a/Resources/administration/src/module/sw-order/view/sw-order-detail-base/sw-order-detail-base.html.twig
+++ b/Resources/administration/src/module/sw-order/view/sw-order-detail-base/sw-order-detail-base.html.twig
@@ -63,7 +63,7 @@
                                         {% block sw_order_detail_base_line_items_summary_entries %}
                                             {% block sw_order_detail_base_line_items_summary_amount %}
                                                 <dt>{{ $tc('sw-order.detailBase.summaryLabelAmount') }}</dt>
-                                                <dd>{{ currentOrder.positionPrice | currency(order.currency.meta.viewData.shortName) }}</dd>
+                                                <dd>{{ currentOrder.positionPrice | currency(order.currency.translated.shortName) }}</dd>
                                             {% endblock %}
                                             {% block sw_order_detail_base_line_items_summary_shipping_cost %}
                                                 <dt>{{ $tc('sw-order.detailBase.summaryLabelShippingCosts') }}</dt>
@@ -82,13 +82,13 @@
 
                                             {% block sw_order_detail_base_line_items_summary_amount_without_tax %}
                                                 <dt><strong>{{ $tc('sw-order.detailBase.summaryLabelAmountWithoutTaxes') }}</strong></dt>
-                                                <dd><strong>{{ currentOrder.amountNet | currency(order.currency.meta.viewData.shortName) }}</strong></dd>
+                                                <dd><strong>{{ currentOrder.amountNet | currency(order.currency.translated.shortName) }}</strong></dd>
                                             {% endblock %}
 
                                             {% block sw_order_detail_base_line_items_summary_taxes %}
                                                 <template v-for="calculatedTax in sortedCalculatedTaxes">
                                                     <dt>{{ $t('sw-order.detailBase.summaryLabelTaxes', { taxRate: calculatedTax.taxRate }) }}</dt>
-                                                    <dd>{{ calculatedTax.tax | currency(order.currency.meta.viewData.shortName)}}</dd>
+                                                    <dd>{{ calculatedTax.tax | currency(order.currency.translated.shortName)}}</dd>
                                                 </template>
                                             {% endblock %}
 
