--- a/Resources/administration/src/module/sw-settings-number-range/page/sw-settings-number-range-list/sw-settings-number-range-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-number-range/page/sw-settings-number-range-list/sw-settings-number-range-list.html.twig
@@ -84,7 +84,7 @@
                                                 <sw-grid-column flex="minmax(120px, 1fr)"
                                                                 :label="$tc('sw-settings-number-range.list.columnUsedIn')">
                                                     {% block sw_settings_number_range_list_columns_used_in_label %}
-                                                        {{ item.meta.viewData.type.typeName }}
+                                                        {{ item.type.typeName }}
                                                     {% endblock %}
                                                 </sw-grid-column>
                                             {% endblock %}
@@ -93,13 +93,13 @@
                                                 <sw-grid-column flex="minmax(150px, 1fr)"
                                                                 :label="$tc('sw-settings-number-range.list.columnAssignment')">
                                                     {% block sw_settings_number_range_list_columns_assignment_label %}
-                                                        <sw-label small class="sw-settings-number-range-list__columns-assignment-tag" v-if="item.meta.viewData.type.global">
+                                                        <sw-label small class="sw-settings-number-range-list__columns-assignment-tag" v-if="item.type.global">
                                                             {{ $tc('sw-settings-number-range.list.global') }}
                                                         </sw-label>
 
                                                         <template v-if="!item.meta.viewData.type.global">
-                                                            <sw-label small class="sw-settings-number-range-list__columns-assignment-tag" v-for="salesChannel in item.meta.viewData.salesChannels.elements">
-                                                                {{ salesChannel.viewData.name }}
+                                                            <sw-label small class="sw-settings-number-range-list__columns-assignment-tag" v-for="salesChannel in item.salesChannels">
+                                                                {{ salesChannel.translated.name }}
                                                             </sw-label>
                                                         </template>
                                                     {% endblock %}
